# sciduck

./: .readthedocs.yaml  README.md  README_building_docs.md  README_docs.md  pyproject.toml  requirements.txt
docs/: .readthedocs.yml  Makefile  requirements.txt
docs/source/: basic_qc.rst  conf.py  index.rst  modules.rst  sciduck.rst  templates.rst
sciduck/: __init__.py
source/: conf.py
src/sciduck/: __init__.py  annotation_table.py  basic_qc.py  entropy_qc.py  plotting.py  templates.py
tutorials/: annotation_table.ipynb  sciduck_plotting_example.ipynb  standard_workflow.ipynb
